<resources>
    <string name="app_name">Nairobi Gymkhana</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="payment_info">Payment Info</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="close_dialog">Close</string>
    <string name="ng_post">NG Post</string>
    <string name="member_address_title">Address</string>
    <string name="postal_code">Post Code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="post_address">Post Address</string>
    <string name="member_membership_title">Membership</string>
    <string name="membership_number">Membership Number</string>
    <string name="membership_type">Membership Type</string>
    <string name="membership_expiry">Membership Expiry Date</string>
    <string name="member_credentials_title">Credentials</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="member_wallet">My Wallet</string>
    <string name="update_profile">Update Profile</string>
    <string name="send_email">Send Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_link">Please enter your email for reset link:</string>
    <string name="button_cancel">Cancel</string>
    <string name="generate_statement">Generate Statement</string>
    <string name="amount_due">Amount Due</string>
    <string name="pay_mpesa">Pay Via M-Pesa</string>
    <string name="gym">GYM</string>
    <string name="gym_annual_single">Annual: Ksh 28,000/= (Single)</string>
    <string name="gym_annual_couple">Annual: Ksh 40,000/= (Couple)</string>
    <string name="gym_semi_annual_single">Semi Annual: Ksh 16,000/= (Single)</string>
    <string name="gym_semi_annual_couple">Semi Annual: Ksh 24,000/= (Couple)</string>
    <string name="gym_quarterly">Quarterly: Ksh 9,000/= (Single and Over 18 only)</string>
    <string name="gym_monthly">Monthly: Ksh 3,500/= (Single Only)</string>
    <string name="gym_daily">Daily: Ksh 400/=</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt massa ante, ut vulputate dui volutpat non. Sed volutpat ultrices vestibulum. Praesent nunc elit, rhoncus sed justo eu, dignissim aliquam mauris. Integer sit amet sapien sit amet nunc euismod tincidunt sed non nibh. Sed finibus neque eget est elementum pulvinar. Pellentesque risus elit, congue a risus nec, aliquet vehicula nisl. Sed id auctor dolor. Fusce vitae velit non justo ullamcorper vulputate sit amet ut lectus. Quisque lacinia turpis ante, vitae ornare dui congue eget.</string>

</resources>