<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="32dp"
    android:elevation="2dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <TextView
            style="@style/login_text"
            android:text="@string/reset_password" />

        <TextView
            style="@style/login_text"
            android:layout_marginTop="8dp"
            android:text="@string/reset_link" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputTextFieldLayout"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgot_password_email"
                style="@style/inputFieldsTextStyle"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_send_email"
            style="@style/button_style"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/primary_button_blue"
            android:text="@string/send_email"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_forgot_cancel"
            style="@style/button_style"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/secondary_button_blue"
            android:fontFamily="@font/roboto"
            android:padding="6dp"
            android:text="@string/button_cancel"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>