<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaymentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:title="My Wallet" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_make_payment"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:elevation="4dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="18dp">

                    <TextView
                        style="@style/member_card_title"
                        android:text="@string/member_membership_title" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/inputTextFieldLayout"
                        android:hint="@string/membership_type">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/payment_member_type"
                            style="@style/inputFieldsTextStyle"
                            android:enabled="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/inputTextFieldLayout"
                        android:hint="@string/membership_expiry">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/payment_member_expiry_date"
                            style="@style/inputFieldsTextStyle"
                            android:enabled="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/inputTextFieldLayout"
                        android:hint="@string/amount_due">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/payment_member_amount"
                            style="@style/inputFieldsTextStyle"
                            android:enabled="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/generate_statement"
                        style="@style/button_style"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/primary_button_red"
                        android:text="@string/generate_statement"
                        android:textColor="#ffffff"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:elevation="4dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="18dp">

                    <TextView
                        style="@style/member_card_title"
                        android:text="@string/gym" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/inputTextFieldLayout"
                        android:hint="@string/membership_expiry">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/payment_gym_expiry"
                            style="@style/inputFieldsTextStyle"
                            android:enabled="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <RadioButton
                            android:id="@+id/pay_gym_annual_single"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gym_annual_single"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/pay_gym_annual_couple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gym_annual_couple"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/pay_gym_semi_annual_single"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gym_semi_annual_single"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/pay_gym_semi_annual_couple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gym_semi_annual_couple"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/pay_gym_quarterly"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gym_quarterly"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/pay_gym_monthly"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gym_monthly"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/pay_gym_daily"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gym_daily"
                            android:textSize="18sp" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_make_payment"
        style="@style/button_style"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_mpesa"
        android:text="@string/pay_mpesa"
        android:textColor="@color/black"
        android:textSize="18sp" />

</RelativeLayout>