<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="32dp"
    android:elevation="2dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <TextView
            style="@style/login_text"
            android:text="@string/login" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputTextFieldLayout"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                style="@style/inputFieldsTextStyle"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/inputTextFieldLayout"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/password_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                style="@style/inputFieldsTextStyle"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_reset_password"
            style="@style/resetPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/button_style"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/primary_button_blue"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>